cmake_minimum_required(VERSION 2.8)
project( Proyecto )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Proyecto main.cpp )
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(Proyecto PRIVATE Threads::Threads)
target_link_libraries( Proyecto ${OpenCV_LIBS})
